backend_DEPRECATED/error3.txt
[dotenv@17.2.3] injecting env (42) from .env -- tip: Ô£à audit secrets and track compliance: https://dotenvx.com/ops
Firebase Admin inicializado com sucesso.
[dotenv@17.2.3] injecting env (0) from .env -- tip: ÔÜÖ´©Å  write to custom object with { processEnv: myObject }
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­ƒôí add observability to secrets: https://dotenvx.com/ops
[dotenv@17.2.3] injecting env (0) from .env -- tip: ­ƒöä add secrets lifecycle management: https://dotenvx.com/ops
[dotenv@17.2.3] injecting env (0) from .env -- tip: ÔÜÖ´©Å  override existing env vars with { override: true }
C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: Ô¿» Unable to compile TypeScript:
src/controllers/paymentController.ts(86,42): error TS2322: Type '{ mp_payment_id: string; }' is not assignable to type 'paymentsWhereUniqueInput'.
  Type '{ mp_payment_id: string; }' is not assignable to type '{ id: number; } & { id?: number | undefined; AND?: paymentsWhereInput | paymentsWhereInput[] | undefined; OR?: paymentsWhereInput[] | undefined; ... 26 more ...; money_release_date?: string | ... 3 more ... | undefined; }'.
    Property 'id' is missing in type '{ mp_payment_id: string; }' but required in type '{ id: number; }'.

    at createTSError (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\thela\.gemini\antigravity\scratch\projeto_figma_app\backend\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2322 ]
}
